# content-splitter

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
content_splitter/: split_content.py
tests/: split_content_test.py  test-1.txt
